PR24953: fix foreach (v = v1 in arr) loop behaviour

Previously, keys were correctly propagated to foreach loops, however,
values were defaulted to 0. The new implementation allows values to
be propagated along with the keys.

1) Added instructions to load corresponding values.
2) Added block to check for invalid key/value pairs.
3) Added test which checks for correct key/value pairs.