bpf-translate.cxx
@@ -1741,6 +1741,11 @@ bpf_unparser::visit_foreach_loop(foreach_loop* s)
   if (i == this_locals->end())
     throw SEMANTIC_ERROR(_("unknown index"), keydecl->tok);
 
+  vardecl *valdecl = s->value->referent;
+  auto j = this_locals->find(valdecl);
+  if (j == this_locals->end())
+     throw SEMANTIC_ERROR(_("unknown value"), valdecl->tok);
+
   symbol *a;
   if (! (a = dynamic_cast<symbol *>(s->base)))
     throw SEMANTIC_ERROR(_("unknown type"), s->base->tok);
@@ -1782,12 +1787,14 @@ bpf_unparser::visit_foreach_loop(foreach_loop* s)
 
   value *limit = this_prog.new_reg();
   value *key = i->second;
+  value *val = j->second;
   value *i0 = this_prog.new_imm(0);
   value *key_ofs = this_prog.new_imm(-keysize);
   value *newkey_ofs = this_prog.new_imm(-keysize-keysize);
   value *frame = this_prog.lookup_reg(BPF_REG_10);
   block *body_block = this_prog.new_block ();
-  block *load_block = this_prog.new_block ();
+  block *load_block_1 = this_prog.new_block ();
+  block *load_block_2 = this_prog.new_block ();
   block *iter_block = this_prog.new_block ();
   block *join_block = this_prog.new_block ();
 
@@ -1812,11 +1819,11 @@ bpf_unparser::visit_foreach_loop(foreach_loop* s)
   this_prog.mk_mov (this_ins, this_prog.lookup_reg(BPF_REG_5), limit);
   this_prog.mk_call (this_ins, BPF_FUNC_map_get_next_key, 5);
   this_prog.mk_jcond (this_ins, NE, this_prog.lookup_reg(BPF_REG_0), i0,
-                      join_block, load_block);
+                      join_block, load_block_1);
 
   this_prog.use_tmp_space(2*keysize);
 
-  emit_jmp(load_block);
+  emit_jmp(load_block_1);
 
   // Do loop body
   loop_break.push_back (join_block);
@@ -1844,12 +1851,49 @@ bpf_unparser::visit_foreach_loop(foreach_loop* s)
   this_prog.mk_mov (this_ins, this_prog.lookup_reg(BPF_REG_5), limit);
   this_prog.mk_call (this_ins, BPF_FUNC_map_get_next_key, 5);
   this_prog.mk_jcond (this_ins, NE, this_prog.lookup_reg(BPF_REG_0), i0,
-                      join_block, load_block);
+                      join_block, load_block_1);
 
   // Load next key, decrement limit if applicable
-  set_block(load_block);
-  // XXX Return the key. If a string, key is already a string address.
+  set_block(load_block_1);
+
+  // Return the key. If it's a string, it's already a string address.
   this_prog.mk_ld (this_ins, BPF_DW, key, frame, -keysize-keysize);
+  this_prog.load_map (this_ins, this_prog.lookup_reg(BPF_REG_1), map_id);
+
+  // To lookup value, we need to pass a pointer to the key. If the key is an 
+  // integer, we need to pass the location in the stack.
+  switch (keydecl->type)
+    {
+      case pe_long:
+        this_prog.mk_binary (this_ins, BPF_ADD, this_prog.lookup_reg(BPF_REG_2),
+                             frame, newkey_ofs);
+        break;
+      case pe_string:
+        this_prog.mk_mov (this_ins, this_prog.lookup_reg(BPF_REG_2), key);
+        break;
+      default:
+        throw SEMANTIC_ERROR (_("unhandled foreach key type"), keydecl->tok);
+    }
+
+  this_prog.mk_call (this_ins, BPF_FUNC_map_lookup_elem, 2);
+  this_prog.mk_jcond (this_ins, EQ, this_prog.lookup_reg(BPF_REG_0), i0,
+                      join_block, load_block_2);
+
+  // Load the corresponding value if key is valid.
+  set_block(load_block_2);
+
+  // If the value is an integer, we must deference the pointer.
+  switch (valdecl->type)
+    {
+      case pe_long:
+        this_prog.mk_ld(this_ins, BPF_DW, val, this_prog.lookup_reg(BPF_REG_0), 0);
+        break;
+      case pe_string:
+        this_prog.mk_mov(this_ins, val, this_prog.lookup_reg(BPF_REG_0));
+        break;
+      default:
+        throw SEMANTIC_ERROR (_("unhandled foreach value type"), valdecl->tok);
+    }
 
   if (s->limit)
       this_prog.mk_binary (this_ins, BPF_ADD, limit, limit, this_prog.new_imm(-1));
